--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "*",
     "connect-mongo": "*",
+    "cookie-parser": "^1.1.0",
     "cors": "^2.8.4",
     "express": "*",
     "express-session": "*",
